--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title                    : "The ARCADE Framework"
 title_separator          : "-"
 name                     : &name "SINTEF" # &name is a YAML anchor which can be *referenced later
 description              : &description "An architectural description framework for software-intensive systems"
-url                      : http://opendatalab.no # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://arcade-framework.org # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "opendatalab-no/arcade-framework"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
